--- a/wa.user.css
+++ b/wa.user.css
@@ -6,7 +6,7 @@
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.css
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
-@version      2.6.2
+@version      2.6.3
 @license      MIT
 ==/UserStyle== */
 @-moz-document domain("web.whatsapp.com") {
@@ -49,7 +49,7 @@
     --blur-in: 0.4s;
     --blur-out: 0.2s;
     --ui-font: "custom font", "Segoe UI", "Helvetica Neue", Helvetica, "Lucida Grande", Arial, Ubuntu, Cantarell, "Fira Sans", sans-serif;
-    --version: "Dark-WhatsApp Lite v2.6.2 — May 11th, 2020";
+    --version: "Dark-WhatsApp Lite v2.6.3 — May 14th, 2020";
     --message: "Improved RTL message hacks, more info in the changelog. 🎉 🥳 I rewrote my Dark-Instagram theme, check it out at link below.";
     --changes: "https://github.com/vednoc/dark-instagram";
   }
@@ -62,7 +62,6 @@
     color: var(--light) !important;
     background-color: var(--dark) !important;
     background-image: none;
-    scrollbar-color: var(--accent) rgba(85,85,85,0.125);
   }
   body ::placeholder,
   body ._1mpL5 {
@@ -124,6 +123,9 @@
   }
   body ::-webkit-scrollbar-thumb {
     background-color: var(--accent);
+  }
+  body * {
+    scrollbar-color: var(--accent) rgba(85,85,85,0.133) !important;
   }
   body,
   body button,
@@ -301,9 +303,17 @@
   [data-mention-jid] span {
     color: var(--accent) !important;
   }
+  .matched-mention .at-symbol,
+  [data-mention-jid] .at-symbol {
+    color: var(--lighter) !important;
+  }
   .matched-mention:hover span,
   [data-mention-jid]:hover span {
     text-decoration: underline !important;
+  }
+  .matched-mention:hover .at-symbol,
+  [data-mention-jid]:hover .at-symbol {
+    text-decoration: none !important;
   }
   .me9CP {
     border-color: var(--lighter) !important;
