--- a/wa.user.styl
+++ b/wa.user.styl
@@ -2222,17 +2222,17 @@
                         overflow: unset i;
                         margin-top: -8px i;
                         margin-left: 0px i;
-                        position: absolute;
+                        position: absolute i;
                         &::before {
-                            content: '';
-                            z-index: 1;
-                            position: absolute;
-                            top: -31px; left: -71px;
-                            height: 53px;
-                            width: 53px;
-                            box-shadow: inset 0 0 0 3px green;
-                            rad: var(--avatar-r);
-                            animation: 2s pulse infinite;
+                            content: '' i;
+                            z-index: 1 i;
+                            position: absolute i;
+                            top: -31px i; left: -71px i;
+                            height: 53px i;
+                            width: 53px i;
+                            box-shadow: inset 0 0 0 3px green i;
+                            rad: var(--avatar-r) i;
+                            animation: 2s pulse infinite i;
                         }
                     }
                     /// Message status.
