--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1661,42 +1661,56 @@
             _o = 16px;
             _i = 6px;
             &-in, &-out {
-                /// Last message | Groups -> Sticker sender.
+                /// Single message | Groups -> Sticker sender.
                 &:not(._1T1d2) > div > div { &, ._2R8MP { rad: _o i }}
                 /// Fix rounded corners for videos/images/gifs/replies/links.
                 { _media } { rad: (_o - 2px) (_o - 2px) _o _o i }
                 /// Forward button.
                 ._26fC0 { rad: _o i }
+                /// Reply context menu.
+                ._20EE3 { border-top-right-radius: _o i }
             }
             &-in {
-                /// (first|all|last|single) message(s).
-                [data-icon *= 'tail'] + div, ._2R8MP { rad: _o _o _o _i i }
-                > div > div { rad: _i _o _o _i i }
-                &._1T1d2 + .message-in:not(._1T1d2) {
-                    c: 0 0 right;
-                    /// Last message | Groups -> Sticker sender.
-                    > div > div { &, ._2R8MP { rad: _i _o _o _o i }}
-                }
-                &._1T1d2 {
-                    /// Rounded corners for media/replies/etc.
-                    + ._1T1d2, + :not(._1T1d2) {
-                        c: 0 0 blue;
-                        { _media } { rad: _i _o _o _o i }
+                /// First message.
+                /// In/Out/System messages.
+                &, ../-out, /._3rjxZ {
+                    &:not(._1T1d2) + .message-in._1T1d2 {
+                        // c: 0 0 #ff55550a;
+                        > div > div, ._2R8MP { rad: _o _o _o _i i }
                     }
+                }
+                /// Messages in between.
+                &._1T1d2 + ._1T1d2:not(#z) {
+                    // c: 0 0 #55ff550a;
+                    { _media } { rad: _i _o _o _o i }
+                    > div > div, ._2R8MP { rad: _i _o _o _i i }
+                }
+                /// Last message.
+                &._1T1d2 + .message-in:not(._1T1d2) {
+                    // c: 0 0 #5555ff0a;
+                    { _media } { rad: _i _o _o _o i }
+                    > div > div { &, ._2R8MP { rad: _i _o _o _o i }}
                 }
             }
             &-out {
-                /// (first|all|last|single) message(s).
-                [data-icon *= 'tail'] + div { rad: _o _o _i _o i }
-                > div > div { rad: _o _i _i _o i }
-                &._1T1d2 + .message-out:not(._1T1d2) {
-                    // c: 0 0 left;
-                    > div > div, { _media } { rad: _o _i _o _o i }
+                /// First message.
+                /// In/Out/System messages.
+                &, ../-in, /._3rjxZ {
+                    &:not(._1T1d2) + .message-out._1T1d2 {
+                        // c: 0 0 #ff55551a;
+                        > div > div, { _media } { rad: _o _o _i _o i }
+                    }
                 }
-                /// Rounded corners for media/replies/etc.
+                /// Messages in between.
                 &._1T1d2 + ._1T1d2 {
-                    // c: 0 0 blue;
+                    // c: 0 0 #55ff551a;
                     { _media } { rad: _o _i _o _o i }
+                    > div > div, ._2R8MP { rad: _o _i _i _o i }
+                }
+                /// Last message.
+                &._1T1d2 + .message-out:not(._1T1d2) {
+                    // c: 0 0 #5555ff1a;
+                    > div > div, { _media } { rad: _o _i _o _o i }
                 }
             }
         }
