chat: add whitespace to time for fb-like tails

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1931,10 +1931,8 @@
                     padding-bottom: 1rem i;
                     margin: 0.1rem 0.2rem i;
                 }
-                /// Exclude padding from last message.
-                &._1T1d2 + :not(._1T1d2) ._3zb-j {
-                    // padding-bottom: 0 i;
-                }
+                /// Timestamp whitespace.
+                ._2f-RV { margin-right: 0.2rem i }
                 /// Hide timemstamps.
                 &._1T1d2 {
                     ._3zb-j, .ZhF0n { transition: padding 0.2s ease i }
