chat: switch to rem units for RTL padding hack

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1900,8 +1900,8 @@
         if (rtl_format) {
             &-in, &-out {
                 [data-pre-plain-text] > [dir = 'rtl'] {
-                    if (!rtl_header) { padding-top: 1.25em i }
-                    padding-bottom: 1.25em i;
+                    if (!rtl_header) { padding-top: 0.8rem i }
+                    padding-bottom: 0.8rem i;
                 }
                 .selectable-text.invisible-space[dir = 'rtl'] {
                     > span[class] { display: unset i }
@@ -1912,7 +1912,7 @@
                 /// Apparently messages with images/videos are treated like
                 /// special snowflakes, so this resets their timestamps.
                 [style *= 'width'], .video-thumb {
-                    + div > ._3zb-j[dir = 'rtl'] { padding-bottom: 1.25em i }
+                    + div > ._3zb-j[dir = 'rtl'] { padding-bottom: 0.8rem i }
                 }
                 /// Remove whitespace for links.
                 .message-text-link::after { content: unset i }
