--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1660,6 +1660,30 @@
         if ( chat_m_t == 'fb-like' ) {
             _o = 16px;
             _i = 6px;
+            /// Feat -> Left message bubble position.
+            if (chat_left == 'start') {
+                left_top = _o _o _o _i i
+                left_mid = _i _o _o _i i
+                left_med = _i _o _o _o i
+                left_end = _i _o _o _o i
+            } else {
+                left_top = _o _o _i _o i
+                left_mid = _o _i _i _o i
+                left_med = _o _i _o _o i
+                left_end = _o _i _o _o i
+            }
+            /// Feat -> Right message bubble position.
+            if (chat_right == 'end') {
+                right_top = _o _o _i _o i
+                right_mid = _o _i _i _o i
+                right_med = _o _i _o _o i
+                right_end = _o _i _o _o i
+            } else {
+                right_top = _o _o _o _i i
+                right_mid = _i _o _o _i i
+                right_med = _i _o _o _o i
+                right_end = _i _o _o _o i
+            }
             &-in, &-out {
                 /// Single message | Groups -> Sticker sender.
                 &:not(._1T1d2) > div > div { &, ._2R8MP { rad: _o i }}
@@ -1676,20 +1700,20 @@
                 &, ../-out, /._3rjxZ {
                     &:not(._1T1d2) + .message-in._1T1d2 {
                         // c: 0 0 #ff55550a;
-                        > div > div, ._2R8MP { rad: _o _o _o _i i }
+                        > div > div, ._2R8MP { rad: left_top }
                     }
                 }
                 /// Messages in between.
                 &._1T1d2 + ._1T1d2:not(#z) {
                     // c: 0 0 #55ff550a;
-                    { _media } { rad: _i _o _o _o i }
-                    > div > div, ._2R8MP { rad: _i _o _o _i i }
+                    { _media } { rad: left_med }
+                    > div > div, ._2R8MP { rad: left_mid }
                 }
                 /// Last message.
                 &._1T1d2 + .message-in:not(._1T1d2) {
                     // c: 0 0 #5555ff0a;
-                    { _media } { rad: _i _o _o _o i }
-                    > div > div { &, ._2R8MP { rad: _i _o _o _o i }}
+                    { _media } { rad: left_med }
+                    > div > div { &, ._2R8MP { rad: left_end }}
                 }
             }
             &-out {
@@ -1698,19 +1722,20 @@
                 &, ../-in, /._3rjxZ {
                     &:not(._1T1d2) + .message-out._1T1d2 {
                         // c: 0 0 #ff55551a;
-                        > div > div, { _media } { rad: _o _o _i _o i }
+                        > div > div { rad: right_top }
                     }
                 }
                 /// Messages in between.
                 &._1T1d2 + ._1T1d2 {
                     // c: 0 0 #55ff551a;
-                    { _media } { rad: _o _i _o _o i }
-                    > div > div, ._2R8MP { rad: _o _i _i _o i }
+                    { _media } { rad: right_med }
+                    > div > div, ._2R8MP { rad: right_mid }
                 }
                 /// Last message.
                 &._1T1d2 + .message-out:not(._1T1d2) {
                     // c: 0 0 #5555ff1a;
-                    > div > div, { _media } { rad: _o _i _o _o i }
+                    { _media } { rad: right_med }
+                    > div > div { rad: right_end }
                 }
             }
         }
