--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1670,7 +1670,7 @@
 
     // Main -> Chat message bubbles.
     .message {
-        _media = '._1opHa, .gDOmN, ._3CnDa, ._1iJeo, .D4OT6, ._2nFG1'
+        _media = '._1opHa, .gDOmN, ._3CnDa, ._1iJeo, .D4OT6, ._2nFG1, .q5faU'
         /// Feat -> Custom bubble colors.
         ( chat_b_l == 0 ) ? left  = msg_l : left  = b_l_bg;
         ( chat_b_r == 0 ) ? right = msg_r : right = b_r_bg;
@@ -1974,8 +1974,15 @@
                     padding-bottom: 0.8rem i;
                     margin: 0.1rem 0.2rem i;
                 }
+                /// Embedded links.
+                ._3FDzO {
+                    margin-left: -5px i;
+                    margin-right: -3px i;
+                }
+                /// Photos/gifs.
+                ._2F4Rh, ._1umJf { padding: 4px i }
                 /// Timestamp whitespace.
-                ._2f-RV { margin-right: 0.2rem i }
+                ._2f-RV, ._1uFFm { margin-right: 0.2rem i }
                 /// Hide timemstamps.
                 &._1T1d2 {
                     ._3zb-j, .ZhF0n { transition: padding 0.2s ease i }
