--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1677,36 +1677,37 @@
         /// Feat -> Message tails -> Facebook style.
         if ( chat_m_t == 'fb-like' ) {
             _o = 16px;
+            _m = (16px - 2px);
             _i = 6px;
             /// Feat -> Left message bubble position.
             if (chat_left == 'start') {
                 left_top = _o _o _o _i i
                 left_mid = _i _o _o _i i
-                left_med = _i _o _o _o i
+                left_med = _i _m _m _i i
                 left_end = _i _o _o _o i
             } else {
                 left_top = _o _o _i _o i
                 left_mid = _o _i _i _o i
-                left_med = _o _i _o _o i
+                left_med = _m _i _i _m i
                 left_end = _o _i _o _o i
             }
             /// Feat -> Right message bubble position.
             if (chat_right == 'end') {
                 right_top = _o _o _i _o i
                 right_mid = _o _i _i _o i
-                right_med = _o _i _o _o i
+                right_med = _m _i _i _m i
                 right_end = _o _i _o _o i
             } else {
                 right_top = _o _o _o _i i
                 right_mid = _i _o _o _i i
-                right_med = _i _o _o _o i
+                right_med = _i _m _m _i i
                 right_end = _i _o _o _o i
             }
             &-in, &-out {
                 /// Single message | Groups -> Sticker sender.
                 &:not(._1T1d2) > div > div { &, ._2R8MP { rad: _o i }}
                 /// Fix rounded corners for videos/images/gifs/replies/links.
-                { _media } { rad: (_o - 2px) (_o - 2px) _o _o i }
+                { _media } { rad: _m _m _o _o i }
                 /// Forward button.
                 &:not(#z) ._26fC0:not(#z) { rad: _o i }
                 /// Reply context menu.
