chat: add new messages to reset for first bubble

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1715,8 +1715,8 @@
             }
             &-in {
                 /// First message.
-                /// In/Out/System messages.
-                &, ../-out, /._3rjxZ {
+                /// In/Out/System/New messages.
+                &, ../-out, /._3rjxZ, /._1mq8g {
                     &:not(._1T1d2) + .message-in._1T1d2 {
                         // c: 0 0 #ff55550a;
                         > div > div, ._2R8MP { rad: left_top }
@@ -1737,8 +1737,8 @@
             }
             &-out {
                 /// First message.
-                /// In/Out/System messages.
-                &, ../-in, /._3rjxZ {
+                /// In/Out/System/New messages.
+                &, ../-in, /._3rjxZ, /._1mq8g {
                     &:not(._1T1d2) + .message-out._1T1d2 {
                         // c: 0 0 #ff55551a;
                         > div > div { rad: right_top }
