chat: update inner padding for messages with media

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1975,13 +1975,12 @@
                     padding-bottom: 0.8rem i;
                     margin: 0.1rem 0.2rem i;
                 }
-                /// Embedded links.
-                ._3FDzO {
-                    margin-left: -5px i;
-                    margin-right: -3px i;
+                /// Embedded links/replies.
+                ._3FDzO, ._3CVlE {
+                    margin: -2px -3px 6px -5px i;
                 }
                 /// Photos/gifs.
-                ._2F4Rh, ._1umJf { padding: 4px i }
+                ._2F4Rh, ._1umJf, ._3jbqt { padding: 4px i }
                 /// Timestamp whitespace.
                 ._2f-RV, ._1uFFm { margin-right: 0.2rem i }
                 /// Hide timemstamps.
