chat: fix avatar radius option for shared contacts

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -602,7 +602,7 @@
     // Global -> Avatars.
     /// Profile and Chat avatars (without quoted contacts);
     /// New group and 'No blocked contacts yet' icons.
-    ._2UkYn, ._1WliW, ._1jJLh, ._2Lev2 {
+    ._2UkYn, ._1WliW, ._1jJLh, ._2Lev2, ._24lP4 {
         rad: var(--avatar-r) i;
         c: 0 0 bg;
         > img { rad: var(--avatar-r) i }
@@ -1662,8 +1662,8 @@
             div[style *= 'base64'] { filter: none i }
             div[style *= 'height'] { c: 0 0 bg }
             ._3gkvk { c: fg }
-            /// Multiple contacts.
-            /._3BtGF, /.mc_ET { c: 0 bg t }
+            /// Shared contacts.
+            /._3BtGF, /.mc_ET { c: 0 bg }
             /.AVd_p { c: fg }
         }
     }
