--- a/wa.user.styl
+++ b/wa.user.styl
@@ -555,11 +555,11 @@
                 top: s; right: s; bottom: s; left: s;
                 height: unset; width: unset;
                 filter: b o t h;
+                background-color: transparent i;
                 background-image: var(--bg-image) i;
                 background-position: var(--bg-pos) i;
                 background-repeat: var(--bg-rep) i;
                 background-size: var(--bg-size) i;
-                c: 0 0 t;
             } else if ( app_image == default ) {
                 c: 0 0 hl;
             } else {
