--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1671,6 +1671,7 @@
     // Main -> Chat message bubbles.
     .message {
         _media = '._1opHa, .gDOmN, ._3CnDa, ._1iJeo, .D4OT6, ._2nFG1, .q5faU'
+        _timestamps = '._2f-RV, ._2G09-, ._3EFt_, ._2Ll5c, .GbMip, ._1uFFm'
         /// Feat -> Custom bubble colors.
         ( chat_b_l == 0 ) ? left  = msg_l : left  = b_l_bg;
         ( chat_b_r == 0 ) ? right = msg_r : right = b_r_bg;
@@ -1989,9 +1990,9 @@
                 /// Hide timemstamps.
                 &._1T1d2 {
                     ._3zb-j, .ZhF0n { transition: padding 0.2s ease i }
-                    ._2f-RV, ._2G09-, ._3EFt_ { transition: opacity 0.2s ease i }
+                    { _timestamps } { transition: opacity 0.2s ease i }
                     > div:not(:hover) {
-                        ._2f-RV, ._2G09-, ._3EFt_ { opacity: 0 i }
+                        { _timestamps } { opacity: 0 i }
                         ._3zb-j[dir = 'rtl'] { padding-bottom: 0 i }
                         .ZhF0n { padding-top: 0rem i }
                     }
