--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1672,7 +1672,7 @@
     // Main -> Chat message bubbles.
     .message {
         _media = '._1opHa, .gDOmN, ._3CnDa, ._1iJeo, .D4OT6, ._2nFG1, .q5faU'
-        _timestamps = '._2f-RV, ._2G09-, ._3EFt_, ._2Ll5c, .GbMip, ._1uFFm, ._1Ppwx'
+        _timestamps = '._2f-RV, ._2G09-, ._3EFt_, ._2Ll5c, .GbMip, ._1uFFm'
         /// Feat -> Custom bubble colors.
         ( chat_b_l == 0 ) ? left  = msg_l : left  = b_l_bg;
         ( chat_b_r == 0 ) ? right = msg_r : right = b_r_bg;
@@ -1712,8 +1712,8 @@
                 { _media } { rad: _m _m _o _o i }
                 /// Forward button.
                 &:not(#z) ._26fC0:not(#z) { rad: _o i }
-                /// Reply context menu.
-                ._20EE3 { border-top-right-radius: _o i }
+                /// Reply/media context menu.
+                ._20EE3 { top: 4px i }
             }
             &-in {
                 /// First message.
@@ -1722,6 +1722,8 @@
                     &:not(._1T1d2) + .message-in._1T1d2 {
                         // c: 0 0 #ff55550a;
                         > div > div, ._2R8MP { rad: left_top }
+                        /// Media context menu.
+                        ._20EE3 { rad: 0 _m 0 0 i }
                     }
                 }
                 /// Messages in between.
@@ -1736,6 +1738,11 @@
                     { _media } { rad: left_med }
                     > div > div { &, ._2R8MP { rad: left_end }}
                 }
+                /// Reply/media context menu.
+                ._20EE3 {
+                    right: 4px i;
+                    rad: (chat_left == 'start') ? 0 _m 0 0 i : 0 _i 0 0 i;
+                }
             }
             &-out {
                 /// First message.
@@ -1744,6 +1751,8 @@
                     &:not(._1T1d2) + .message-out._1T1d2 {
                         // c: 0 0 #ff55551a;
                         > div > div { rad: right_top }
+                        /// Media context menu.
+                        ._20EE3 { rad: 0 _m 0 0 i }
                     }
                 }
                 /// Messages in between.
@@ -1757,6 +1766,11 @@
                     // c: 0 0 #5555ff1a;
                     { _media } { rad: right_med }
                     > div > div { rad: right_end }
+                }
+                /// Reply/media context menu.
+                ._20EE3 {
+                    right: 4px i;
+                    rad: (chat_right == 'end') ? 0 _i 0 0 i : 0 _m 0 0 i;
                 }
             }
         }
@@ -1869,6 +1883,8 @@
                     /// Embedded links in DMs.
                     &._2Cju4 { background: none i }
                 }
+                /// Transparent context menus.
+                &._15hve { &._2DNgV, &.jZ4tp { background: none i }}
             }
             /// Replies.
             ._1iJeo {
@@ -1921,6 +1937,8 @@
                 &._1i1U7 { background: linear-gradient(90deg, t, right 60%) i }
                 /// Files.
                 &._2Cju4 { background: none i }
+                /// Transparent context menus.
+                &._15hve { &._2DNgV, &.jZ4tp { background: none i }}
             }
             /// Replies.
             ._1iJeo {
