chat: fix corners for media in the last message

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1735,7 +1735,7 @@
                 /// Last message.
                 &._1T1d2 + .message-in:not(._1T1d2) {
                     // c: 0 0 #5555ff0a;
-                    { _media } { rad: left_med }
+                    { _media } { rad: left_end }
                     > div > div { &, ._2R8MP { rad: left_end }}
                 }
                 /// Reply/media context menu.
@@ -1764,7 +1764,7 @@
                 /// Last message.
                 &._1T1d2 + .message-out:not(._1T1d2) {
                     // c: 0 0 #5555ff1a;
-                    { _media } { rad: right_med }
+                    { _media } { rad: right_end }
                     > div > div { rad: right_end }
                 }
                 /// Reply/media context menu.
