--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1672,7 +1672,7 @@
     // Main -> Chat message bubbles.
     .message {
         _media = '._1opHa, .gDOmN, ._3CnDa, ._1iJeo, .D4OT6, ._2nFG1, .q5faU'
-        _timestamps = '._2f-RV, ._2G09-, ._3EFt_, ._2Ll5c, .GbMip, ._1uFFm'
+        _timestamps = '._2f-RV, ._2G09-, ._3EFt_, ._2Ll5c, .GbMip, ._1uFFm, ._1DZAH'
         /// Feat -> Custom bubble colors.
         ( chat_b_l == 0 ) ? left  = msg_l : left  = b_l_bg;
         ( chat_b_r == 0 ) ? right = msg_r : right = b_r_bg;
