icons: fix color for 'delete chat' icon

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1018,8 +1018,9 @@
             &[data-icon *= '-dblcheck']:not(#z) path { v: ac }
         }
         &[data-icon *= 'check'] path { fill-opacity: 1 i }
-        /// Exit/Report.
+        /// Exit/Delete/Report.
         &[data-icon = 'exit'],
+        &[data-icon = 'delete'],
         &[data-icon = 'thumbs-down'],
         /// Delete chat/missed voice/video call.
         &[data-icon = 'delete-danger'],
