chat: fix corners for media in fb-like msg tails

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1737,6 +1737,7 @@
                 &, ../-out, /._3rjxZ, /._1mq8g {
                     &:not(._1T1d2) + .message-in._1T1d2 {
                         // c: 0 0 #ff55550a;
+                        { _media } { rad: left_top }
                         > div > div, ._2R8MP { rad: left_top }
                         /// Media context menu.
                         ._20EE3 { rad: 0 _m 0 0 i }
@@ -1766,6 +1767,7 @@
                 &, ../-in, /._3rjxZ, /._1mq8g {
                     &:not(._1T1d2) + .message-out._1T1d2 {
                         // c: 0 0 #ff55551a;
+                        { _media } { rad: right_top }
                         > div > div { rad: right_top }
                         /// Media context menu.
                         ._20EE3 { rad: 0 _m 0 0 i }
