Added custom welcome image style
image url is linked to @vednoc repository

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -2319,3 +2319,6 @@
         }
     }
 }
+[data-asset-intro-image] {
+    background-image: url(https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/images/wsapp.png);
+}
