chat: fix unsaved contacts for screenshot mode

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -2540,6 +2540,12 @@
                         c: t 0 ss;
                     }
                 }
+                /// Chat -> Unsaved contacts.
+                .RZ7GO {
+                    max-height: 21px;
+                    rad: 4px;
+                    c: t 0 ss;
+                }
                 /// Chat -> Hide emojis and icons.
                 [class *= 'text']:not([contenteditable]) span {
                     /// Exclude icons/whitespace.
